--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
+    "allowJs": true,
     // this enables stricter inference for data properties on `this`
     "strict": true,
     "jsx": "preserve",
@@ -10,6 +11,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["./resources/ts/**/*", "tailwind.config.js"],
+  "include": ["./resources/ts/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
