--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "vue-loader": "^17.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "aos": "^2.3.4",
     "particles.js": "^2.0.0",
     "vue": "^3.2.26",
