--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "aos": "^2.3.4",
+    "@types/aos": "^3.0.4",
+    "aos": "^3.0.0-beta.6",
     "particles.js": "^2.0.0",
     "vue": "^3.2.26",
     "vue-router": "^4.0.12"
