--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "es2015",
     "allowJs": true,
     // this enables stricter inference for data properties on `this`
     "strict": true,
@@ -10,7 +10,8 @@
     "sourceMap": true,
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "noImplicitAny": false
   },
   "include": ["./resources/ts/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
