--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "es2015",
+    "module": "ES6",
     "allowJs": true,
     // this enables stricter inference for data properties on `this`
     "strict": true,
